[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/TitleScreen/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/ubuntu_condensed.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/GUI/Buttons/DefaultButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/menu/_perro_viejo_logo.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/nunito_sans_black.ttf" type="DynamicFontData" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.278431, 0.176471, 0.235294, 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/fonts/m5x7.ttf"

[sub_resource type="DynamicFont" id=5]
size = 12
use_mipmaps = true
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 12
use_mipmaps = true
extra_spacing_top = -1
extra_spacing_bottom = -3
font_data = SubResource( 4 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 160.218 ]
}
First_Level = "res://src/Levels/LaMar.tscn"

[node name="BG" type="Panel" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxMain" type="VBoxContainer" parent="BG/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 304.0
margin_bottom = 164.0
size_flags_vertical = 3

[node name="NameContainer" type="VBoxContainer" parent="BG/MarginContainer/VBoxMain"]
margin_left = 93.0
margin_right = 288.0
margin_bottom = 72.0
size_flags_horizontal = 8
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Kaloche" type="Label" parent="BG/MarginContainer/VBoxMain/NameContainer"]
margin_right = 195.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.901961, 0.282353, 0.180392, 1 )
text = "Nombrejuego"
align = 2

[node name="Version" type="Label" parent="BG/MarginContainer/VBoxMain/NameContainer"]
margin_top = 42.0
margin_right = 195.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.956863, 0.705882, 0.105882, 1 )
text = "Miz Jam 1"
align = 2

[node name="ButtonsContainer" type="HBoxContainer" parent="BG/MarginContainer/VBoxMain"]
margin_top = 76.0
margin_right = 288.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonContainer" type="VBoxContainer" parent="BG/MarginContainer/VBoxMain/ButtonsContainer"]
margin_top = 22.0
margin_right = 52.0
margin_bottom = 72.0
size_flags_vertical = 8
custom_constants/separation = 2

[node name="NewGame" parent="BG/MarginContainer/VBoxMain/ButtonsContainer/ButtonContainer" groups=[
"FocusGroup",
"MainMenu",
] instance=ExtResource( 3 )]
margin_right = 52.0
margin_bottom = 11.0
size_flags_horizontal = 0
text = "Nuevo juego"
align = 0

[node name="Options" parent="BG/MarginContainer/VBoxMain/ButtonsContainer/ButtonContainer" instance=ExtResource( 3 )]
margin_top = 13.0
margin_bottom = 24.0
size_flags_horizontal = 0
text = "Opciones"
align = 0

[node name="Credits" parent="BG/MarginContainer/VBoxMain/ButtonsContainer/ButtonContainer" instance=ExtResource( 3 )]
margin_top = 26.0
margin_right = 35.0
margin_bottom = 37.0
size_flags_horizontal = 0
text = "Créditos"
align = 0

[node name="Exit" parent="BG/MarginContainer/VBoxMain/ButtonsContainer/ButtonContainer" instance=ExtResource( 3 )]
margin_top = 39.0
margin_right = 18.0
margin_bottom = 50.0
size_flags_horizontal = 0
text = "Salir"
align = 0

[node name="CreditsContainer" type="TextureButton" parent="BG"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_scale = Vector2( 1.2, 1.2 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PerroViejo" type="Label" parent="BG/CreditsContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.5
margin_top = 9.53543
margin_right = 40.5
margin_bottom = 23.5354
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.811765, 0.776471, 0.721569, 1 )
text = "Perro Viejo [games]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Devs" type="Label" parent="BG/CreditsContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.0
margin_top = 28.063
margin_right = 82.0
margin_bottom = 124.063
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.235294, 0.67451, 0.843137, 1 )
text = "Itzel \"Noisy Panda\" González Estrada
Audio

Juan \"Quiet Gecko\" Carlos García Ángel
Música | Music

José Miguel Romero 
Programación | Programming

Mateo \"Carenalga\" Robayo Rodríguez
Programación | Programming"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" parent="BG/CreditsContainer" instance=ExtResource( 3 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -103.333
margin_top = 107.5
margin_right = -85.3333
margin_bottom = 118.5
size_flags_horizontal = 0
text = "Back"
align = 0
